Setup seceret key

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 EMAIL_HOST_USER=waseem.96.ra@gmail.com
 EMAIL_HOST_PASSWORD=psee zjtb gjjb cdtk
+KEY=-e-ze-!jlncf1k)!c(6q$@qphd^kmr)h+lpx2(lt^imly*kn!0
